--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
       </div>
     </div>
   </header>
+  
+  <nav class="menu">
+  <ul>
+    <li><a href="#">Quem Somos</a></li>
+    <li><a href="#">Portfólio</a></li>
+    <li><a href="#">Serviços</a></li>
+    <li><a href="#">Contato</a></li>
+  </ul>
+</nav>
+
 </body>
 </html>
