--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="topo">
     <div class="container-header">
-      <img src="Tecwiews_Dados/Imagens/Logo Ícone_F.png" alt="Logo Tecwiews" class="logo-icone" />
+      <img src="Tecwiews_Dados/Logo_PS/Logo Tecwiews_S.F.png" alt="Logo Tecwiews" class="logo-icone" />
       <div class="texto-logo">
         <h1 class="titulo">Tecwiews</h1>
         <p class="slogan">Projetos comunicam e sites vendem</p>
