--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
     <li><a href="#">Contato</a></li>
   </ul>
 </nav>
+<section class="recepcao">
+  <div class="recepcao-container">
+    <div class="recepcao-imagem">
+      <img src="Tecwiews_Dados/Imagens/Ima recepção.png" alt="Imagem Tecwiews" />
+    </div>
+    <div class="conteudo-recepcao">
+      <h2 class="frase-impacto">Tornamos seu produto compreendido, encontrado e valorizado.</h2>
+      <p class="texto-recepcao">
+        Documentamos e digitalizamos seus produtos com desenhos e informações técnicas de forma clara, acessível e objetiva. Atuamos com modelagem 3D, desenhos técnicos detalhados, listas de componentes e vistas explodidas — tudo entregue de forma organizada e digitalizada para facilitar o acesso dos seus clientes.
+      </p>
+      <p class="texto-recepcao">
+        Além disso, desenvolvemos sites profissionais que posicionam sua empresa no ambiente digital, ampliando a visibilidade dos seus produtos e facilitando o contato com novos clientes. Ideal para empresas que ainda não têm presença digital ou que precisam se destacar mais no mercado.
+      </p>
+    </div>
+  </div>
+</section>
+
 
 </body>
 </html>
