--- a/index.html
+++ b/index.html
@@ -25,20 +25,39 @@
     <li><a href="#">Contato</a></li>
   </ul>
 </nav>
+
 <section class="recepcao">
   <div class="recepcao-container">
     <div class="recepcao-imagem">
       <img src="Tecwiews_Dados/Imagens/Ima recepção_pers..png" alt="Serviços da Tecwiews" />
     </div>
     <div class="conteudo-recepcao">
-      <h2 class="frase-impacto">Dê voz aos seus projetos e leve seu negócio além da prancheta.</h2>
+      <h2 class="frase-impacto">Tornamos seu produto compreendido, encontrado e valorizado.</h2>
       <p class="texto-recepcao">
-        A Tecwiews nasceu para transformar conhecimento técnico em presença digital. Conectamos sua empresa ao mercado moderno, apresentando seus produtos com clareza, profissionalismo e acessibilidade online. Se sua empresa ainda não está bem posicionada na internet, chegou a hora de mudar isso.
+        Documentação e digitalização de produtos com informações técnicas claras e objetivas, apresentadas de forma profissional e acessível.<br/>
+        Conectamos sua empresa ao mercado digital e ampliamos sua visibilidade online.<br/>
+        Ideal para negócios que ainda não têm presença digital ou que precisam se destacar mais no mercado.
+
+      
       </p>
     </div>
   </div>
 </section>
 
+<section class="servicos">
+  <div class="servicos-container">
+    <h2 class="titulo-servicos">O que a Tecwiews faz por você</h2>
+    <p class="texto-servicos">
+      Atuamos na criação de documentações técnicas completas dos seus produtos, incluindo desenhos técnicos, modelagem 3D, vistas explodidas e listas de componentes.
+    </p>
+    <p class="texto-servicos">
+      Também oferecemos suporte à manutenção industrial, com documentação de peças e componentes internos, facilitando a fabricação sob medida.
+    </p>
+    <p class="texto-servicos">
+      Além disso, desenvolvemos sites profissionais e objetivos, voltados para gerar visibilidade e atrair novos clientes. Sua empresa será vista com clareza e confiança no ambiente digital.
+    </p>
+  </div>
+</section>
 
 
 </body>
