--- a/index.html
+++ b/index.html
@@ -59,6 +59,56 @@
   </div>
 </section>
 
+<section class="segmentos">
+  <h2 class="titulo-segmentos">Quem pode contar com a Tecwiews</h2>
+  <div class="segmentos-grid">
+    <div class="segmento">
+      <span class="icone">🏭</span>
+      <p>Indústrias de pequeno e médio porte</p>
+    </div>
+    <div class="segmento">
+      <span class="icone">🧰</span>
+      <p>Comércio técnico e empresas de peças</p>
+    </div>
+    <div class="segmento">
+      <span class="icone">🔧</span>
+      <p>Oficinas industriais e fabricantes sob demanda</p>
+    </div>
+    <div class="segmento">
+      <span class="icone">🌐</span>
+      <p>Empresas e Comércios com pouco ou nenhum site profissional</p>
+    </div>
+  </div>
+</section>
+
+<section class="beneficios">
+  <h2 class="titulo-beneficios">Por que sua empresa precisa disso</h2>
+  <div class="conteudo-beneficios">
+    <p>
+      Produtos bem documentados reduzem erros, facilitam vendas e transmitem confiança.
+      Ter tudo isso acessível online, por meio de um site bem construído, coloca sua empresa na frente da concorrência.
+    </p>
+    <p>
+      O mercado está mudando. Os negócios acontecem cada vez mais no ambiente digital.
+      E a Tecwiews está aqui para levar sua empresa com segurança e qualidade para esse novo cenário.
+    </p>
+  </div>
+</section>
+
+<section class="clientes">
+  <h2 class="titulo-clientes">Empresas que já contam com a Tecwiews</h2>
+  <div class="grade-clientes">
+    <img src="Tecwiews_Dados/Logos/logo1.png" alt="Cliente 1" />
+    <img src="Tecwiews_Dados/Logos/logo2.png" alt="Cliente 2" />
+    <img src="Tecwiews_Dados/Logos/logo3.png" alt="Cliente 3" />
+    <img src="Tecwiews_Dados/Logos/logo4.png" alt="Cliente 4" />
+  </div>
+</section>
+
+<footer class="rodape">
+  <p>&copy; 2025 Tecwiews - Todos os direitos reservados.</p>
+  <p><a href="mailto:contato@tecwiews.com.br">contato@tecwiews.com.br</a></p>
+</footer>
 
 </body>
 </html>
