--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1 class="titulo">Tecwiews</h1>
         <p class="slogan">Projetos comunicam e sites vendem</p>
       </div>
+      <img src="Tecwiews_Dados/Imagens/Novo.png" alt="Imagem Cabeçalho" class="imagem-cabecalho" />
     </div>
   </header>
   
