--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Logo da empresa -->
             <div class="logo">
                 <img src="Imagens_Site/Logo Tecwiews_01.png" alt="Tecwiews - Logo da empresa de documentação técnica" loading="eager" class="logo-image">
-                TECWIEWS
+                TECWIEWSus
             </div>
             
             <!-- Menu de navegação principal -->
